--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 <body>
     <div id="container" class="container">
         <div class="search-box">
-            <input type="text" class="map__input js-input-search" value="Красная площадь">
+            <input type="text" class="map__input js-input-search" value="">
             <button class="map__button js-search-button">Найти</button>
         </div>
     </div>
